--- a/style.css
+++ b/style.css
@@ -14,4 +14,16 @@ body {
 .drink-container, .joke-container {
     margin: 20px;
 }
+
+.button-container {
+  height: 100px;
+  position: relative;
+
+}
   
+#dad-button {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
