--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+:root {
+  --red: #951010;
+  --white: #FFF;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
+    background-color: var(--red);
   }
 
   h1 {
     text-align: center;
+    color: var(--white);
+    font-family: "Dancing Script", cursive;
+  }
+
+  p {
+    color: var(--white);
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
   .intro-text-container {
