--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ justify-content: center;
 }
 
 .content-container {
-  display: flex; 
   gap: 20px; 
   justify-content: center; 
   align-items: flex-start; 
   margin: 0;
+  display: none;
 }
 
 .content-container p {
