--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   .intro-img-container {
     display: flex;
     justify-content: center;
+    margin-bottom: 15px;
   }
 
   .intro img {
