Hide measurement converter by default

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ color: black;
 }
 
 .converter-container {
-  display: flex;
+  display: none;
   justify-content: center; 
   align-items: flex-start; 
 }
