--- a/fonts.css
+++ b/fonts.css
@@ -5,3 +5,8 @@
     font-optical-sizing: auto;
     font-style: normal;
   }
+
+  @font-face {
+    font-family: "Arial Rounded MT";
+    src: url(/assets/Fonts/arialroundedmtbold.ttf);
+}
