--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ align-items: center;
 
 .intro-text {
   font-size: 24px;
-  margin: 30px;
+  margin: 15px 30px 15px 30px;
 }
 
 .intro-img-container {
@@ -60,7 +60,7 @@ align-items: center;
   height: 100px;
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 #dad-button {
