Wider containers on mobile

--- a/style.css
+++ b/style.css
@@ -272,4 +272,10 @@ align-items: center;
   .drink-image {
     max-width: 200px;
   }
+
+  .drink-container,
+  .joke-container,
+  .converter {
+    width: 90%;
+  }
 }
