--- a/style.css
+++ b/style.css
@@ -92,9 +92,10 @@ align-items: center;
 .content-container {
   gap: 20px;
   justify-content: center;
-  align-items: flex-start;
+  align-items: stretch;
   margin: 0;
   display: none;
+  min-height: 400px;
 }
 
 .content-container p {
@@ -114,14 +115,12 @@ align-items: center;
 .drink-container {
   display: flex;
   flex-direction: row;
-  min-height: 300px;
   width: 66%;
   padding-bottom: 10px;
   box-sizing: border-box;
 }
 
 .joke-container {
-  height: 300px;
   width: 33%;
   padding: 20px;
   box-sizing: border-box;
