--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ align-items: center;
 .drink-container {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
   width: 66%;
   padding-bottom: 10px;
   box-sizing: border-box;
