--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ align-items: center;
 .intro-text {
   font-size: 24px;
   margin: 15px 30px 15px 30px;
+  text-align: center;
 }
 
 .intro-img-container {
@@ -301,7 +302,7 @@ align-items: center;
 
   .converter {
     width: 90%; 
-    margin: 20px 5%; 
+    margin: 20px;
     padding: 20px; 
     gap: 10px; 
   }
@@ -337,6 +338,14 @@ align-items: center;
     padding: 8px 15px;
   }
 
+  #dad-button:hover {
+    margin: 20px;
+  }
+
+  .content-container {
+    gap: 0;
+  }
+
   .drink-text-wrapper h2,
   .drink-text-wrapper h3 {
     text-align: center;
@@ -353,8 +362,8 @@ align-items: center;
   }
 
   .converter {
-    width: 95%; 
-    margin: 10px 2.5%; 
+    width: 90%; 
+    margin: 20px;
     padding: 15px; 
   }
 
